refactoring information data
