# api/entities/BookmarkEntity.go
@@ -5,7 +5,7 @@ type Bookmark struct {
 	BookmarkTypeId int `gorm:"column:bookmark_type_id" json:"bookmark_type_id"`
 	BookmarkType   BookmarkType
 	InformationId  int `gorm:"column:information_id" json:"information_id"`
-	Information    Information
+	Information    InformationEntities
 	UserId         int `gorm:"column:user_id" json:"user_id"`
 	User           Users
 }
